<resources>
    <string name="app_name">Pro-Fi</string>
    <string name="current_wifi_connection">Current Wifi Connection</string>
    <string name="refresh_wi_fi_connection">Refresh Wi-Fi Connection</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="automatic">Automatic</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="switch_mode">Mode</string>
    <string name="ringtone">Ringtone</string>
    <string name="media">Media</string>
    <string name="notifications">Notifications</string>
    <string name="system">System</string>
    <string name="prof_Name">Name:</string>
    <string name="title_activity_add_">add_Activity</string>
    <string name="title_activity_add1_activity">add1</string>
    <string name="profile_name">Name</string>
    <string name="home">Home</string>
    <string name="new_profile">New Profile</string>
    <string name="wifi_trigger">WiFi Trigger</string>
    <string name="name">Name</string>
    <string name="volume_settings">Volume Settings</string>
    <string name="ring_volume_desc">Ring volume</string>
    <string name="media_volume_desc">Media Volume</string>
    <string name="notification_volume_desc">Notification Volume</string>
    <string name="system_volume_desc">System Volume</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="select_wifi_trigger">Select one or more networks to activate this profile</string>
    <string name="finish">Finish</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="name_exists_errr">This Profile Name already Exists</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile?</string>
    <string name="delete">Delete</string>
    <string name="selected_wifi_networks">Selected WiFi networks</string>
    <string name="no_wifi_networks_selected">No WiFi networks selected</string>
</resources>
