<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="stabs.com.pro_fi.EditProfileActivity"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <!-- NAME FIELD -->
        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textCapSentences"
            android:ems="12"
            android:textAlignment="center"
            android:hint="@string/profile_name"
            android:textColorHint="@color/disabledColor"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/add_profile_name"
            android:elevation="50dp"
            />

        <RelativeLayout
            android:id="@+id/body_layout"
            android:layout_width="wrap_content"
            android:layout_height="410dp"
            android:layout_below="@+id/nameTxt"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true">

            <RelativeLayout
                android:id="@+id/ringtone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:clipToPadding="false">

                <TextView
                    android:id="@+id/ringText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/ringtone"
                    android:textStyle="italic"
                    />
                <ImageView
                    android:id="@+id/iconRingtone"
                    android:layout_below="@+id/ringText"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_ringtone"
                    android:layout_marginRight="10dp"/>

                <SeekBar
                    android:id="@+id/ringtone_seekbar"
                    android:layout_below="@id/ringText"
                    android:layout_toRightOf="@id/iconRingtone"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:progress="50"
                    android:progressTint="@color/colorPrimary"
                    android:progressBackgroundTint="#ff0000"
                    android:background="@drawable/seekbar_background"
                    android:thumb="@drawable/ic_ringtone"
                    android:thumbOffset="8dp"
                    android:elevation="10dp"
                    />
                <!--android:thumbTint="@color/colorPrimary"-->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/media_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ringtone_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clipToPadding="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mediaText"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:textStyle="italic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/media"
                    />

                <ImageView
                    android:id="@+id/iconMedia"
                    android:layout_below="@+id/mediaText"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_media"
                    android:layout_marginRight="10dp"/>

                <SeekBar
                    android:id="@+id/media_seekbar"
                    android:layout_below="@id/mediaText"
                    android:layout_toRightOf="@id/iconMedia"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:progress="50"
                    android:progressTint="@color/colorPrimary"
                    android:progressBackgroundTint="#ff0000"
                    android:background="@drawable/seekbar_background"
                    android:thumb="@drawable/ic_media"
                    android:thumbOffset="8dp"
                    android:elevation="10dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notifications_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/media_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clipToPadding="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/notifications_txt"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:textStyle="italic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/notifications"
                    />

                <ImageView
                    android:id="@+id/iconNotifications"
                    android:layout_below="@+id/notifications_txt"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_notifications"
                    android:layout_marginRight="10dp"/>

                <SeekBar
                    android:id="@+id/notifications_seekbar"
                    android:layout_below="@id/notifications_txt"
                    android:layout_toRightOf="@id/iconNotifications"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:progress="50"
                    android:progressTint="@color/colorPrimary"
                    android:progressBackgroundTint="#ff0000"
                    android:background="@drawable/seekbar_background"
                    android:thumb="@drawable/ic_notifications"
                    android:thumbOffset="8dp"
                    android:elevation="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/system_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notifications_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clipToPadding="false"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/system_txt"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="5dp"
                    android:textStyle="italic"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/system"
                    />

                <ImageView
                    android:id="@+id/iconSystem"
                    android:layout_below="@+id/system_txt"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:background="@drawable/ic_system"
                    android:layout_marginRight="10dp"/>

                <SeekBar
                    android:id="@+id/system_seekbar"
                    android:layout_below="@id/system_txt"
                    android:layout_toRightOf="@id/iconSystem"
                    android:layout_width="220sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="50dp"
                    android:progress="50"
                    android:progressTint="@color/colorPrimary"
                    android:progressBackgroundTint="#ff0000"
                    android:background="@drawable/seekbar_background"
                    android:thumb="@drawable/ic_system"
                    android:thumbOffset="8dp"
                    android:elevation="10dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_layout"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_arrow_fw"
            android:clickable="true"
            android:onClick="edit1_method"
            android:layout_centerHorizontal="true"
            app:backgroundTint="@color/colorPrimaryDark" />


    </RelativeLayout>

</ScrollView>
